# MaterialTesting

./: .gitignore  Thickness_Normalized.xlsx  distal.xlsx  mt.py  mt_ml.py  param_summary_distal.csv  param_summary_proximal.csv  proximal.xlsx  pyproject.toml  readme.md  run_ml.py  tests.py
catboost_info/: catboost_training.json  fits_distal.pkl  fits_proximal.pkl  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/mtlab/analysis/: constitutive_summary.py  reporting.py  stats.py  strain_energy.py
src/mtlab/cli/: mt.py
src/mtlab/data/: io.py  schema.py
src/mtlab/fitting/: core.py  utils.py
src/mtlab/models/: core.py
src/mtlab/plots/: se_plot.py
src/mtlab/verification/: validate.py
